# test_superhero_api

./: .gitignore  README.md  bug_report.md  bugs.txt  pyproject.toml
tests/: test_create_superhero.py  test_delete_superhero.py  test_get_superheroes.py  test_update_superhero.py
